# subtitles

./: CMakeLists.txt  LICENSE  README.md  mainwindow.cpp  mainwindow.h  subtitle.cpp  subtitle.h
